@@ -34,6 +34,5 @@
 extern void *child(void *arg);
 extern void poll_host(int host_id, int host_thread, int last_host_thread, int host_data_ids, char* host_time);
 extern char *exec_poll(host_t *current_host, char *command);
-extern void get_system_information(host_t *host, MYSQL *mysql);
 extern int is_multipart_output(char *result);
 extern int validate_result(char *result);
